@@ -16,6 +16,7 @@ import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 @Configuration
@@ -23,22 +24,6 @@ import java.util.concurrent.TimeUnit;
 @RequiredArgsConstructor
 public class WebSecurityConfig {
 
-    // WebMvcConfigurer를 사용한 CORS 설정 (특정 경로에만 적용)
-    @Bean
-    public WebMvcConfigurer corsConfigurer() {
-        return new WebMvcConfigurer() {
-            @Override
-            public void addCorsMappings(CorsRegistry registry) {
-                registry.addMapping("/api/**")
-                        .allowedOrigins("https://api.artpings.com")  // 특정 도메인 허용
-                        .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS")  // 허용할 HTTP 메소드
-                        .allowedHeaders("Authorization", "Cache-Control", "Content-Type", "X-Requested-With")  // 허용할 헤더 지정
-                        .exposedHeaders("Authorization", "Content-Disposition")  // 클라이언트가 접근할 수 있는 응답 헤더
-                        .allowCredentials(true)  // 쿠키나 인증 관련 정보 허용
-                        .maxAge(TimeUnit.DAYS.toSeconds(1));  // CORS 요청에 대한 브라우저 캐싱 시간 설정 (1일)
-            }
-        };
-    }
 
     // CorsConfigurationSource를 사용한 CORS 설정 (전체 경로에 적용)
     @Bean
@@ -46,11 +31,11 @@ public class WebSecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList(
                 "https://www.artpings.com",  // 다른 출처도 허용
-                "https://api.artpings.com"
+                "https://api.artpings.com",
+                "https://artpings.com"
         ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));  // 허용할 HTTP 메서드 확장
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));  // 허용할 헤더 설정
-        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Disposition"));  // 노출할 헤더 설정
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);  // 자격 증명 허용 (쿠키, 인증)
         configuration.setMaxAge(3600L);  // CORS 캐싱 시간 설정 (1시간)
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
